apt-proxy (1.9.15+SVN20040728) unstable; urgency=low

  * Woraround when found a wrong server (Otavio).  (closes: #260788)
  * Applied patch from Jason Thomas <jason@debian.org> to add RPM support
    (Otavio). (closes: #261943)

 -- Otavio Salvador <otavio@debian.org>  Wed, 28 Jul 2004 20:17:44 -0300

apt-proxy (1.9.15) unstable; urgency=low

  * Add support for upstream proxy servers (Otavio). (closes: #258904)
  * Fix code to not stat a file while this not exist (Otavio).
  * Add support to specify which network interface should listen
    (Otavio). (closes: 256609)
  * Add support to translated debconf templates (Otavio).
  * Fix apt-proxy-import manpage to include -i when says about importing
    from apt-move archive (Otavio). (closes: #259959)
  * Include backports.org as an example backend (Otavio). (closes: #259874)

 -- Otavio Salvador <otavio@debian.org>  Mon, 19 Jul 2004 18:04:49 -0300

apt-proxy (1.9.14) unstable; urgency=low

  * Add some missing files in clean target (Otavio).
  * Add Build-dependencie of python-apt (Otavio). (closes: #258147)
  * Add support to import .udebs (Otavio). (closes: #174380)
  * Update to use the new twisted way to handle internet applications
    (Otavio). (closes: #240294)
  * Add twisted 1.3.0rc1 in know versions (Otavio).
  * Update packaging, now conforming to policy version 3.6.1.1 (Otavio).
  * Major packaging cleanup to use better debhelper tools like dh_python
    and like (Otavio).
  * Swap maintainer and uploaders field as requested by Chris (Otavio).
  * Change postinst to always check by user (Otavio). (closes: #258215)
  * Restart inet.d if upgrading from some version earlier then 1.9.0
    (Otavio). (closes: #259009)

 -- Otavio Salvador <otavio@debian.org>  Tue, 13 Jul 2004 16:31:16 -0300

apt-proxy (1.9.13) unstable; urgency=low

  * Add support for http dynamic backends. If a file is requested for a
    backend not listed in the configuration file, it will be used as the